# sol-rust

./: .env  .gitignore  .prettierrc.json  Cargo.toml  README.md  build.rs
.cargo/: config.toml
code/: camera.rs  collision.rs  core.rs  dev_mode.rs  diagnostic.rs  diagnostics.rs  gamepad.rs  input_map.rs  lib.rs  main.rs  main_menu.rs  motion.rs  movement.rs  settings.rs  settings_input.rs  start.rs  start_bundle.rs  start_library.rs  static_convert.rs
code/core/: camera.rs  collision.rs  input_map.rs
code/dev_mode/: collision_grid.rs  convert.rs  crosshair.rs
code/motion/: destination.rs  movement.rs
data/: collision.json
src/: camera.rs  collision.rs  lib.rs  main.rs
src/boot/: convert.rs
src/core/: camera.rs  gamepad.rs  mod.rs
src/dev_mode/: collision_grid.rs  crosshair.rs  grid.rs  mod.rs
src/motion/: destination.rs  indicator.rs  mod.rs  movement.rs
src/resources/: collision.rs  time.rs
stones/: default_input_settings.json  settings_default.json  settings_input_default.json
