[package]
name = "sol-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# dynamic linking only for development
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
bevy_screen_diagnostics = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
image = "0.24.7"
ico = "0.3.0"
sha2 = "0.10.8"

[build-dependencies]
embed-resource = "1.6"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
